--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 .dark {
-  --background: #060606;
+  --background: #040608;
   --text-color: #ffffff;
   --opposite-color: #1a202c;
 }
@@ -17,7 +17,20 @@
 @font-face {
   font-family: 'Typewriter';
   src: url('./fonts/jmh-typewriter.thin.ttf') format('truetype');
-  font-weight: normal;
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Typewriter';
+  src: url('./fonts/jmh-typewriter.regular.ttf') format('truetype');
+  font-weight: 400; /* Regular */
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Typewriter';
+  src: url('./fonts/jmh-typewriter.bold.ttf') format('truetype');
+  font-weight: 700; /* Bold */
   font-style: normal;
 }
 
